<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryLightColor"
    tools:context=".ui.DetailActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/logoBank_Iv"
            android:contentDescription="@string/logo_bank_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/placeholder" />
        <TextView
            android:labelFor="@id/setKodeBank_Tv"
            android:text="@string/kode_bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:textColor="@color/secondaryTextColor"
            android:background="@color/primaryAccent"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/setKodeBank_Tv"
            android:text="@string/digit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/primaryAccent"
            android:textColor="@color/primaryTextColor"
            android:textAlignment="center"/>
        <TextView
            android:labelFor="@id/swiftCode_Tv"
            android:text="@string/kode_swift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:paddingTop="10dp"
            android:textColor="@color/secondaryTextColor"
            android:background="@color/primaryAccent"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/swiftCode_Tv"
            android:text="@string/swift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClick"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/primaryAccent"
            android:textColor="@color/primaryTextColor"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="12sp"
            android:textColor="@color/secondaryTextColor"
            android:background="@color/primaryAccent"
            android:text="@string/tapkode"
            android:paddingBottom="10dp" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginEnd="3dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/secondaryTextColor"
                    android:drawableStart="@drawable/ic_live_help_black_24dp" />
                <TextView
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:padding="10dp"
                    android:text="@string/info"
                    android:textColor="@color/secondaryTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="-3dp"
                    android:layout_marginEnd="3dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/secondaryTextColor"
                    android:drawableStart="@drawable/ic_call_black_24dp"
                    />
                <TextView
                    android:id="@+id/noTelpBank_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/no_telp"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"
                    android:onClick="onClick"
                    android:foreground="?attr/selectableItemBackground"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="-3dp"
                    android:layout_marginEnd="3dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/secondaryTextColor"
                    android:drawableStart="@drawable/ic_web_black_24dp"
                    />
                <TextView
                    android:id="@+id/websiteBank_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/primaryTextColor"
                    android:text="@string/website_bank"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:textStyle="bold"
                    android:onClick="onClick"
                    android:foreground="?attr/selectableItemBackground"
                    />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="-3dp"
                    android:layout_marginEnd="3dp"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/secondaryTextColor"
                    android:drawableStart="@drawable/ic_location_on_black_24dp"
                    />
                <TextView
                    android:id="@+id/alamatBank_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/isi_alamat"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:maxLines="5"
                    android:lines="5"
                    android:padding="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onClick"
                    android:foreground="?attr/selectableItemBackground" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>

